create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1974,7 +1974,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uFLBKyvW8U .nav-item:focus,
 .cid-uFLBKyvW8U .nav-link:focus {
@@ -2136,7 +2136,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uFLBKyvW8U .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uFLBKyvW8U .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -2216,11 +2216,11 @@ a {
 }
 .cid-uFLBKyvW8U .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uFLBKyvW8U .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uFLBKyvW8U a.nav-link {
   display: flex;
@@ -2305,7 +2305,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uFLBKyvW8U .navbar-nav .nav-item .nav-link::after {
@@ -8340,7 +8340,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uFLBKyvW8U .nav-item:focus,
 .cid-uFLBKyvW8U .nav-link:focus {
@@ -8502,7 +8502,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uFLBKyvW8U .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uFLBKyvW8U .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -8582,11 +8582,11 @@ a {
 }
 .cid-uFLBKyvW8U .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uFLBKyvW8U .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uFLBKyvW8U a.nav-link {
   display: flex;
@@ -8671,7 +8671,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uFLBKyvW8U .navbar-nav .nav-item .nav-link::after {
@@ -9331,7 +9331,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #ffffff;
+  background: #f7f7f7;
 }
 .cid-uFLBKyvW8U .nav-item:focus,
 .cid-uFLBKyvW8U .nav-link:focus {
@@ -9493,7 +9493,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uFLBKyvW8U .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #f7f7f7;
 }
 .cid-uFLBKyvW8U .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -9573,11 +9573,11 @@ a {
 }
 .cid-uFLBKyvW8U .navbar-dropdown {
   padding: 0;
-  background-color: #ffffff !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uFLBKyvW8U .opacityScroll {
-  background: #ffffff !important;
+  background: #f7f7f7 !important;
 }
 .cid-uFLBKyvW8U a.nav-link {
   display: flex;
@@ -9662,7 +9662,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #ffffff;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uFLBKyvW8U .navbar-nav .nav-item .nav-link::after {
@@ -10032,7 +10032,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGDjq20oB8 .nav-item:focus,
 .cid-uGDjq20oB8 .nav-link:focus {
@@ -10194,7 +10194,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uGDjq20oB8 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGDjq20oB8 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -10274,11 +10274,11 @@ a {
 }
 .cid-uGDjq20oB8 .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uGDjq20oB8 .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uGDjq20oB8 a.nav-link {
   display: flex;
@@ -10363,7 +10363,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uGDjq20oB8 .navbar-nav .nav-item .nav-link::after {
@@ -10785,7 +10785,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGDjzx8Mrw .nav-item:focus,
 .cid-uGDjzx8Mrw .nav-link:focus {
@@ -10947,7 +10947,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uGDjzx8Mrw .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGDjzx8Mrw .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -11027,11 +11027,11 @@ a {
 }
 .cid-uGDjzx8Mrw .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uGDjzx8Mrw .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uGDjzx8Mrw a.nav-link {
   display: flex;
@@ -11116,7 +11116,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uGDjzx8Mrw .navbar-nav .nav-item .nav-link::after {
@@ -11524,7 +11524,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGDjCUECr0 .nav-item:focus,
 .cid-uGDjCUECr0 .nav-link:focus {
@@ -11686,7 +11686,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uGDjCUECr0 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGDjCUECr0 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -11766,11 +11766,11 @@ a {
 }
 .cid-uGDjCUECr0 .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uGDjCUECr0 .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uGDjCUECr0 a.nav-link {
   display: flex;
@@ -11855,7 +11855,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uGDjCUECr0 .navbar-nav .nav-item .nav-link::after {
@@ -12263,7 +12263,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uFLBKyvW8U .nav-item:focus,
 .cid-uFLBKyvW8U .nav-link:focus {
@@ -12425,7 +12425,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uFLBKyvW8U .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uFLBKyvW8U .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -12505,11 +12505,11 @@ a {
 }
 .cid-uFLBKyvW8U .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uFLBKyvW8U .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uFLBKyvW8U a.nav-link {
   display: flex;
@@ -12594,7 +12594,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uFLBKyvW8U .navbar-nav .nav-item .nav-link::after {
@@ -13016,7 +13016,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGDi2zbfww .nav-item:focus,
 .cid-uGDi2zbfww .nav-link:focus {
@@ -13178,7 +13178,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uGDi2zbfww .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGDi2zbfww .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -13258,11 +13258,11 @@ a {
 }
 .cid-uGDi2zbfww .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uGDi2zbfww .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uGDi2zbfww a.nav-link {
   display: flex;
@@ -13347,7 +13347,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uGDi2zbfww .navbar-nav .nav-item .nav-link::after {
@@ -13755,7 +13755,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI4w2q7aS .nav-item:focus,
 .cid-uGI4w2q7aS .nav-link:focus {
@@ -13917,7 +13917,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uGI4w2q7aS .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI4w2q7aS .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -13997,11 +13997,11 @@ a {
 }
 .cid-uGI4w2q7aS .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uGI4w2q7aS .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uGI4w2q7aS a.nav-link {
   display: flex;
@@ -14086,7 +14086,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uGI4w2q7aS .navbar-nav .nav-item .nav-link::after {
@@ -14746,7 +14746,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI4O3SASI .nav-item:focus,
 .cid-uGI4O3SASI .nav-link:focus {
@@ -14908,7 +14908,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uGI4O3SASI .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI4O3SASI .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -14988,11 +14988,11 @@ a {
 }
 .cid-uGI4O3SASI .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uGI4O3SASI .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uGI4O3SASI a.nav-link {
   display: flex;
@@ -15077,7 +15077,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uGI4O3SASI .navbar-nav .nav-item .nav-link::after {
@@ -15737,7 +15737,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI4YxLxiI .nav-item:focus,
 .cid-uGI4YxLxiI .nav-link:focus {
@@ -15899,7 +15899,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uGI4YxLxiI .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI4YxLxiI .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -15979,11 +15979,11 @@ a {
 }
 .cid-uGI4YxLxiI .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uGI4YxLxiI .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uGI4YxLxiI a.nav-link {
   display: flex;
@@ -16068,7 +16068,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uGI4YxLxiI .navbar-nav .nav-item .nav-link::after {
@@ -16728,7 +16728,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI52lZ532 .nav-item:focus,
 .cid-uGI52lZ532 .nav-link:focus {
@@ -16890,7 +16890,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uGI52lZ532 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI52lZ532 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -16970,11 +16970,11 @@ a {
 }
 .cid-uGI52lZ532 .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uGI52lZ532 .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uGI52lZ532 a.nav-link {
   display: flex;
@@ -17059,7 +17059,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uGI52lZ532 .navbar-nav .nav-item .nav-link::after {
@@ -17719,7 +17719,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI5r2zBUP .nav-item:focus,
 .cid-uGI5r2zBUP .nav-link:focus {
@@ -17881,7 +17881,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uGI5r2zBUP .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI5r2zBUP .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -17961,11 +17961,11 @@ a {
 }
 .cid-uGI5r2zBUP .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uGI5r2zBUP .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uGI5r2zBUP a.nav-link {
   display: flex;
@@ -18050,7 +18050,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uGI5r2zBUP .navbar-nav .nav-item .nav-link::after {
@@ -18710,7 +18710,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI5ABsm6s .nav-item:focus,
 .cid-uGI5ABsm6s .nav-link:focus {
@@ -18872,7 +18872,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uGI5ABsm6s .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI5ABsm6s .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -18952,11 +18952,11 @@ a {
 }
 .cid-uGI5ABsm6s .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uGI5ABsm6s .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uGI5ABsm6s a.nav-link {
   display: flex;
@@ -19041,7 +19041,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uGI5ABsm6s .navbar-nav .nav-item .nav-link::after {
@@ -19701,7 +19701,7 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI5Hhg4vf .nav-item:focus,
 .cid-uGI5Hhg4vf .nav-link:focus {
@@ -19863,7 +19863,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uGI5Hhg4vf .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #e1a7ad;
+  background: #f7f7f7;
 }
 .cid-uGI5Hhg4vf .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -19943,11 +19943,11 @@ a {
 }
 .cid-uGI5Hhg4vf .navbar-dropdown {
   padding: 0;
-  background-color: #e1a7ad !important;
+  background-color: #f7f7f7 !important;
   position: fixed;
 }
 .cid-uGI5Hhg4vf .opacityScroll {
-  background: rgba(225, 167, 173, 0) !important;
+  background: #f7f7f7 !important;
 }
 .cid-uGI5Hhg4vf a.nav-link {
   display: flex;
@@ -20032,7 +20032,7 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #e1a7ad;
+    background: #f7f7f7;
     backdrop-filter: blur(8px);
   }
   .cid-uGI5Hhg4vf .navbar-nav .nav-item .nav-link::after {
