--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10546,73 +10546,266 @@ a {
 .cid-uGDjq2TO0Y .mbr-section-btn {
   text-align: center;
 }
-.cid-uKJeS9qyc0 {
+.cid-uKJxEDmxvx {
   padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-bottom: 2rem;
   background-color: #ffffff;
 }
-.cid-uKJeS9qyc0 h6 {
-  line-height: 1.2;
-}
-.cid-uKJeS9qyc0 img,
-.cid-uKJeS9qyc0 .item-img {
-  width: 100%;
-  height: 100%;
-  height: 400px;
-  object-fit: cover;
-}
-@media (max-width: 1200px) {
-  .cid-uKJeS9qyc0 img,
-  .cid-uKJeS9qyc0 .item-img {
-    height: 300px;
-    object-fit: cover;
-  }
-}
-.cid-uKJeS9qyc0 .item:focus,
-.cid-uKJeS9qyc0 span:focus {
-  outline: none;
-}
-.cid-uKJeS9qyc0 .item-wrapper {
-  position: relative;
-  display: flex;
-  flex-flow: column nowrap;
+.cid-uKJxEDmxvx .item {
   margin-bottom: 2rem;
 }
-.cid-uKJeS9qyc0 .mbr-section-btn {
-  margin-top: auto !important;
-  text-align: center;
-}
-.cid-uKJeS9qyc0 .mbr-section-title {
-  color: #000000;
-}
-.cid-uKJeS9qyc0 .mbr-text,
-.cid-uKJeS9qyc0 .mbr-section-btn {
-  color: #000000;
-}
-.cid-uKJeS9qyc0 .item-title {
-  color: #000000;
-  text-align: center;
-}
-.cid-uKJeS9qyc0 .item-subtitle {
-  color: #000000;
-  text-align: center;
-}
-.cid-uKJeS9qyc0 .item-text {
-  color: #000000;
-  text-align: center;
-}
-.cid-uKJeS9qyc0 .content-head {
-  max-width: 800px;
-}
 @media (max-width: 767px) {
-  .cid-uKJeS9qyc0 img,
-  .cid-uKJeS9qyc0 .item-img {
-    height: 300px;
-    object-fit: cover;
-  }
-  .cid-uKJeS9qyc0 .item-wrapper {
+  .cid-uKJxEDmxvx .item {
     margin-bottom: 1rem;
   }
+}
+.cid-uKJxEDmxvx .item-wrapper {
+  height: 100%;
+  position: relative;
+}
+.cid-uKJxEDmxvx .item-wrapper img {
+  height: 100%;
+  object-fit: cover;
+}
+.cid-uKJxEDmxvx .item-wrapper .icon-wrapper {
+  pointer-events: none;
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  font-size: 22px;
+  left: 50%;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid transparent;
+  border-radius: 50%;
+  opacity: 0;
+  color: #464845 !important;
+  transform: translateX(-50%) translateY(-50%);
+  background-color: #edefea !important;
+  transition: 0.2s;
+}
+.cid-uKJxEDmxvx .item-wrapper:hover .icon-wrapper {
+  opacity: 1;
+}
+.cid-uKJxEDmxvx .carousel-control,
+.cid-uKJxEDmxvx .close {
+  background: #1b1b1b;
+}
+.cid-uKJxEDmxvx .carousel-control-prev {
+  margin-left: 2.5rem;
+}
+.cid-uKJxEDmxvx .carousel-control-prev span {
+  margin-right: 5px;
+}
+.cid-uKJxEDmxvx .carousel-control-next {
+  margin-right: 2.5rem;
+}
+.cid-uKJxEDmxvx .carousel-control-next span {
+  margin-left: 5px;
+}
+.cid-uKJxEDmxvx .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 22px;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  font-family: 'Moririse2';
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-uKJxEDmxvx .close::before {
+  content: '\e91a';
+}
+.cid-uKJxEDmxvx .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-uKJxEDmxvx .carousel-control {
+  display: flex;
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-uKJxEDmxvx .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-uKJxEDmxvx .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-uKJxEDmxvx .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-uKJxEDmxvx .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3px;
+}
+.cid-uKJxEDmxvx .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-uKJxEDmxvx .carousel-indicators li.active,
+.cid-uKJxEDmxvx .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-uKJxEDmxvx .carousel-indicators li::after,
+.cid-uKJxEDmxvx .carousel-indicators li::before {
+  content: none;
+}
+.cid-uKJxEDmxvx .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-uKJxEDmxvx .carousel-indicators {
+    display: none !important;
+  }
+}
+@media (max-width: 991px) {
+  .cid-uKJxEDmxvx .carousel-indicators {
+    margin-bottom: 3.625rem !important;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-uKJxEDmxvx .carousel-indicators {
+    display: none;
+  }
+}
+.cid-uKJxEDmxvx .carousel-inner {
+  display: flex;
+  align-items: center;
+}
+.cid-uKJxEDmxvx .carousel-inner > .active {
+  display: block;
+}
+.cid-uKJxEDmxvx .carousel-control.left {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-uKJxEDmxvx .carousel-control.right {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-uKJxEDmxvx .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 768px) {
+  .cid-uKJxEDmxvx .carousel-control,
+  .cid-uKJxEDmxvx .carousel-indicators,
+  .cid-uKJxEDmxvx .modal .close {
+    position: fixed;
+  }
+}
+@media (max-width: 767px) {
+  .cid-uKJxEDmxvx .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 20px;
+  }
+  .cid-uKJxEDmxvx .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-uKJxEDmxvx .carousel-indicators .active,
+.cid-uKJxEDmxvx .carousel-indicators li {
+  width: 7px;
+  height: 7px;
+  margin: 3px;
+  background: #000000;
+  opacity: 0.5;
+  border: 4px solid #000000;
+}
+.cid-uKJxEDmxvx .carousel-indicators .active {
+  background: #fff;
+}
+.cid-uKJxEDmxvx .carousel-indicators li {
+  max-width: 15px;
+  max-height: 15px;
+  border-radius: 50%;
+}
+.cid-uKJxEDmxvx .modal {
+  padding-left: 0 !important;
+  position: fixed;
+  overflow: hidden;
+  padding-right: 0 !important;
+}
+.cid-uKJxEDmxvx .modal-dialog {
+  margin: 0 auto;
+  max-width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-uKJxEDmxvx .modal-content {
+  border-radius: 0;
+  border: none;
+  background: transparent;
+}
+.cid-uKJxEDmxvx .modal-body {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.cid-uKJxEDmxvx .modal-body img {
+  width: 100%;
+  object-fit: contain;
+  max-height: calc(100vh - 1.75rem);
+}
+.cid-uKJxEDmxvx .carousel {
+  width: 100%;
+}
+.cid-uKJxEDmxvx .modal-backdrop.in {
+  opacity: 0.8;
+}
+.cid-uKJxEDmxvx .modal.fade .modal-dialog {
+  transition: margin-top 0.3s ease-out;
+}
+.cid-uKJxEDmxvx .modal.fade .modal-dialog,
+.cid-uKJxEDmxvx .modal.in .modal-dialog {
+  transform: none;
+}
+.cid-uKJxEDmxvx .mbr-gallery .item-wrapper {
+  cursor: pointer;
+}
+.cid-uKJxEDmxvx .content-head {
+  max-width: 800px;
 }
 .cid-uGDjq4dUEA {
   padding-top: 2rem;
