--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -20,7 +20,7 @@ body {
   font-family: Inter Tight;
 }
 .display-1 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 5rem;
   line-height: 1;
 }
@@ -28,7 +28,7 @@ body {
   font-size: 6.25rem;
 }
 .display-2 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 4rem;
   line-height: 1;
 }
@@ -36,7 +36,7 @@ body {
   font-size: 5rem;
 }
 .display-4 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.5rem;
   line-height: 1.5;
 }
@@ -44,7 +44,7 @@ body {
   font-size: 1.875rem;
 }
 .display-5 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 2rem;
   line-height: 1.5;
 }
@@ -52,7 +52,7 @@ body {
   font-size: 2.5rem;
 }
 .display-7 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1.4rem;
   line-height: 1.3;
 }
@@ -636,11 +636,11 @@ a:hover {
   color: #ffffff;
 }
 /* Scroll to top button*/
-#scrollToTop a {
-  border-radius: 100px;
+.scrollToTop_wraper {
+  display: none;
 }
 .form-control {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1.4rem;
   line-height: 1.3;
   font-weight: 400;
@@ -655,7 +655,7 @@ a:hover {
   border-color: #d1a7ad !important;
 }
 .form-control:-webkit-input-placeholder {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1.4rem;
   line-height: 1.3;
   font-weight: 400;
@@ -1811,6 +1811,38 @@ a {
 }
 .cid-uGkAnj2Gyc .media-container-row .mbr-text {
   color: #000000;
+}
+.cid-5Epp87PTwG .float {
+  width: 76px;
+  height: 76px;
+  bottom: 44px;
+  right: 108px;
+  background-color: #4fe97b;
+  color: #ffffff;
+  border-radius: 31px;
+  font-size: 44px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+  position: fixed;
+  margin: auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+.cid-5Epp87PTwG .my-float {
+  margin-top: 16px;
+}
+.cid-5Epp87PTwG P {
+  color: #232323;
+}
+.cid-5Epp87PTwG DIV {
+  color: #ffffff;
+}
+.cid-5Epp87PTwG H10 {
+  color: #767676;
+}
+.cid-5Epp87PTwG .hidden {
+  display: none;
 }
 .cid-uFLBKyvW8U {
   z-index: 1000;
